{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 77,
  "lineage": "b3e88c21-698d-ff6f-118f-6915460ae862",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "redshift_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050271621:internet-gateway/igw-0adb06dd8418bba2d",
            "id": "igw-0adb06dd8418bba2d",
            "owner_id": "975050271621",
            "tags": {
              "Name": "Redshift Internet Gateway"
            },
            "tags_all": {
              "Name": "Redshift Internet Gateway"
            },
            "vpc_id": "vpc-042be2450e52bd050"
          },
          "dependencies": [
            "aws_vpc.redshift_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050271621:route-table/rtb-0eb27a5234d907504",
            "id": "rtb-0eb27a5234d907504",
            "owner_id": "975050271621",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0adb06dd8418bba2d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Redshift Route Table"
            },
            "tags_all": {
              "Name": "Redshift Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-042be2450e52bd050"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.redshift_igw",
            "aws_vpc.redshift_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08160cb9bb6dde83e",
            "route_table_id": "rtb-0eb27a5234d907504",
            "subnet_id": "subnet-0adbae661a39fb667"
          },
          "dependencies": [
            "aws_internet_gateway.redshift_igw",
            "aws_route_table.redshift_route_table",
            "aws_subnet.redshift_subnet",
            "aws_vpc.redshift_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redshift_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050271621:security-group/sg-08c43995d2edbffd2",
            "description": "Allow Redshift traffic",
            "egress": [],
            "id": "sg-08c43995d2edbffd2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5439,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5439
              }
            ],
            "name": "redshift_sg",
            "name_prefix": "",
            "owner_id": "975050271621",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Redshift Security Group"
            },
            "tags_all": {
              "Name": "Redshift Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-042be2450e52bd050"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.redshift_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050271621:subnet/subnet-0adbae661a39fb667",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0adbae661a39fb667",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975050271621",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Redshift Subnet"
            },
            "tags_all": {
              "Name": "Redshift Subnet"
            },
            "vpc_id": "vpc-042be2450e52bd050"
          },
          "dependencies": [
            "aws_vpc.redshift_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "redshift_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:975050271621:vpc/vpc-042be2450e52bd050",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0782753e238832495",
            "default_route_table_id": "rtb-03de436a3f6126586",
            "default_security_group_id": "sg-076365cf19aa794e1",
            "dhcp_options_id": "dopt-0ab6fa7c83eae7a1c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-042be2450e52bd050",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03de436a3f6126586",
            "owner_id": "975050271621",
            "tags": {
              "Name": "Redshift VPC"
            },
            "tags_all": {
              "Name": "Redshift VPC"
            }
          }
        }
      ]
    }
  ]
}